--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<div id="minder" style="height: 800px"></div>
+<div id="minder" style="height: 800px; margin-left: 600px"></div>
 <script type="text/javascript" src="example.js" charset="utf-8"></script>
 </body>
 </html>
